VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc15Down.err
[8MB/455.1MB][  1%][>                                                 ][1.6MB/s]  [16MB/455.1MB][  3%][=>                                                ][1.778MB/s]  [24MB/455.1MB][  5%][==>                                               ][1.846MB/s]  [32MB/455.1MB][  7%][===>                                              ][2MB/s]  [40MB/455.1MB][  8%][====>                                             ][2.105MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][2.182MB/s]  [56MB/455.1MB][ 12%][======>                                           ][2.24MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][2.286MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][2.118MB/s]  [80MB/455.1MB][ 17%][========>                                         ][2.051MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][2.095MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][2.133MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][2.122MB/s]  [112MB/455.1MB][ 24%][============>                                     ][2.074MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][2.034MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][2.032MB/s]  [136MB/455.1MB][ 29%][==============>                                   ][2.03MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][2.057MB/s]  [152MB/455.1MB][ 33%][================>                                 ][2.082MB/s]  [160MB/455.1MB][ 35%][=================>                                ][2.105MB/s]  [168MB/455.1MB][ 36%][==================>                               ][2.127MB/s]  [176MB/455.1MB][ 38%][===================>                              ][2.12MB/s]  [184MB/455.1MB][ 40%][====================>                             ][2.091MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][2.043MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][2.041MB/s]  [208MB/455.1MB][ 45%][======================>                           ][2.019MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][2MB/s]  [224MB/455.1MB][ 49%][========================>                         ][2MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][2.017MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][1.967MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][1.865MB/s]  [256MB/455.1MB][ 56%][============================>                     ][1.829MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][1.784MB/s]  [272MB/455.1MB][ 59%][=============================>                    ][1.766MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][1.761MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][1.756MB/s]  [296MB/455.1MB][ 65%][================================>                 ][1.772MB/s]  [304MB/455.1MB][ 66%][=================================>                ][1.788MB/s]  [312MB/455.1MB][ 68%][==================================>               ][1.793MB/s]  [320MB/455.1MB][ 70%][===================================>              ][1.798MB/s]  [328MB/455.1MB][ 72%][====================================>             ][1.802MB/s]  [336MB/455.1MB][ 73%][====================================>             ][1.797MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][1.801MB/s]  [352MB/455.1MB][ 77%][======================================>           ][1.814MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][1.818MB/s]  [368MB/455.1MB][ 80%][========================================>         ][1.786MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][1.765MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][1.761MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][1.766MB/s]  [400MB/455.1MB][ 87%][===========================================>      ][1.762MB/s]  [408MB/455.1MB][ 89%][============================================>     ][1.759MB/s]  [416MB/455.1MB][ 91%][=============================================>    ][1.755MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][1.759MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][1.77MB/s]  [440MB/455.1MB][ 96%][================================================> ][1.774MB/s]  [448MB/455.1MB][ 98%][=================================================>][1.73MB/s]  [455.1MB/455.1MB][100%][==================================================][1.724MB/s]  [455.1MB/455.1MB][100%][==================================================][1.724MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_60155/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_60155/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
